--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.8
   flutter_switch: ^0.3.2
+  awesome_dialog: ^2.1.2
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   flutter_test:
