--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_switch: ^0.3.2
   awesome_dialog: ^2.1.2
   animated_text_kit: ^4.2.1
+  url_launcher: ^6.0.20
+  webview_flutter: ^3.0.1
 
 dev_dependencies:
   flutter_test:
