--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,8 @@
 
 buildscript {
     // ext.kotlin_version = '1.3.50'
-    ext.kotlin_version = '1.3.61'
+    // ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         mavenCentral()
