--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   provider: ^6.0.2
-  barcode_scan2: ^4.2.0
+  # barcode_scan2: ^4.2.0
   gsheets: ^0.3.2
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.8
